# GreenTrade-Assignment

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/app/: main.py  models.py  schemas.py
backend/app/crud/: products.py  suppliers.py
backend/app/routers/: analytics.py  products.py  suppliers.py
frontend/: index.html  package-lock.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Layout.css  Layout.jsx  Modal.css  Modal.jsx  Sidebar.css  Sidebar.jsx  StatsCard.css  StatsCard.jsx
frontend/src/pages/: Dashboard.css  Dashboard.jsx  Products.css  Products.jsx  Suppliers.css  Suppliers.jsx
frontend/src/services/: api.js
