[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.128.4",
    "psycopg2-binary==2.9.11",
    "psycopg[binary]==3.3.2",
    "pydantic[email]==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "sqlalchemy==2.0.46",
    "uvicorn[standard]==0.40.0",
    "ruff==0.15.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "click==8.3.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "h11==0.16.0",
    "httptools==0.7.1",
    "idna==3.11",
    "psycopg-binary==3.3.2",
    "pydantic-core==2.41.5",
    "pyyaml==6.0.3",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
]
